--- a/Group Comparison.ipynb
+++ b/Group Comparison.ipynb
@@ -2263,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "09d1a241",
+   "id": "29cc1339",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ae1dd413",
+   "id": "723a53dd",
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2312,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e88cb632",
+   "id": "09074d3e",
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "415d3dce",
+   "id": "9609aa0f",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c28a5ae0",
+   "id": "72c8d4df",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
     "\n",
     "This means that the word that appears in a certain corpus is probably ONLY used in that corpus by that artist.\n",
     "\n",
-    "So.. is this why we use Tf-idf in normal case.\n",
+    "So.. This is why we use Tf-idf in normal case (checks the rarity of .\n",
     "\n",
     "These unique tokens are the true representitives for the artist's style."
    ]
