--- a/Group Comparison.ipynb
+++ b/Group Comparison.ipynb
@@ -2263,7 +2263,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "29cc1339",
+   "id": "0f815481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2293,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "723a53dd",
+   "id": "bb039005",
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2312,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "09074d3e",
+   "id": "c88f788f",
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9609aa0f",
+   "id": "c9e6614f",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "72c8d4df",
+   "id": "0978b0c2",
    "metadata": {},
    "outputs": [
     {
@@ -2377,7 +2377,7 @@
     "\n",
     "This means that the word that appears in a certain corpus is probably ONLY used in that corpus by that artist.\n",
     "\n",
-    "So.. This is why we use Tf-idf in normal case (checks the rarity of .\n",
+    "So.. This is why we use Tf-idf in normal case (checks the rarity of tokens amongst a corpus).\n",
     "\n",
     "These unique tokens are the true representitives for the artist's style."
    ]
